[project]
name = "ugbio_single_cell"
version = "1.21.4-0"
requires-python = ">= 3.11"
dependencies = [
    "ugbio_core[reports]",
    "bio>=1.7.1",
]
description = "Ultima Genomics Single Cell utils"
authors = [
    { name = "Inbal Zelig", email = "inbal.zelig@ultimagen.com" },
]
readme = "README.single_cell.md"

[project.scripts]
single_cell_qc = "ugbio_single_cell.single_cell_qc_pipeline:main"
run_tests = "pytest:main"

[tool.uv.sources.ugbio_core]
workspace = true

[tool.setuptools.package-data]
"*" = [
    "**/reports/*",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
