[project]
name = "ugbio_srsnv"
version = "1.17.3-0"
requires-python = ">=3.11"
dependencies = [
    "ugbio_core[vcfbed,reports,ml]",
    "ugbio_ppmseq",
    "ugbio_featuremap",
    "numba>=0.60.0",
    "shap>=0.46.0",
]
description = "Ultima Genomics SRSNV utils"
authors = [
    { name = "Itai Rusinek", email = "itai.rusinek@ultimagen.com" },
    { name = "Gat Krieger", email = "gat.krieger@ultimagen.com" },
    { name = "Inbal Zelig", email = "inbal.zelig@ultimagen.com" },
    { name = "Ori Hirschberg", email = "ori.hirschberg@ultimagen.com" },
    { name = "Rina Schwartz", email = "rina.schwartz@ultimagen.com" },
    { name = "Doron Shem-Tov", email = "doron.shemtov@ultimagen.com" },
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
]
readme = "README.srsnv.md"

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
srsnv_inference = "ugbio_srsnv.srsnv_inference:main"
srsnv_training = "ugbio_srsnv.srsnv_training:main"
srsnv_report = "ugbio_srsnv.srsnv_report:main"

[tool.uv.sources.ugbio_core]
workspace = true

[tool.uv.sources.ugbio_ppmseq]
workspace = true

[tool.uv.sources.ugbio_featuremap]
workspace = true

[tool.setuptools.package-data]
"*" = [
    "**/reports/*",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
