[package]
name = "vcflite"
version = "1.3.1-0dev-0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
rusqlite = "0.32.1"

[dependencies.noodles]
features = [
    "core",
    "vcf",
    "bgzf",
]
git = "https://github.com/gavrie/noodles.git"

[dependencies.clap]
version = "4.5.16"
features = [
    "derive",
]
